--- a/KNN Pratice/8_practice.ipynb
+++ b/KNN Pratice/8_practice.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\eapla\\appdata\\roaming\\python\\python37\\site-packages (1.0.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\eapla\\appdata\\roaming\\python\\python37\\site-packages (from scikit-learn) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\eapla\\appdata\\roaming\\python\\python37\\site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\eapla\\appdata\\roaming\\python\\python37\\site-packages (from scikit-learn) (1.21.6)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\eapla\\appdata\\roaming\\python\\python37\\site-packages (from scikit-learn) (1.7.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 20.1.1; however, version 24.0 is available.\n",
+      "You should consider upgrading via the 'd:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Python37_64\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +67,7 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.neighbors import KNeighborsRegressor # this is used when target is continuous\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -63,11 +95,125 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "wine_df = wine_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = wine_df.iloc[:, 0:11]\n",
+    "Y = wine_df.iloc[:, 11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_data=train_test_split(X, Y, test_size=0.3, random_state=40) \n",
+    "X_train, X_test, y_train, y_test = split_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=7)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = KNeighborsClassifier(n_neighbors=7) #This creates the model but does not train it yet.\n",
+    "\n",
+    "m1.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = m1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 5 5 5 5 5 6 6 5 6 5 6 5 6 5 6 6 5 5 5 6 5 5 5 6 6 6 5 6 5 5 6 6 5 5 6 7\n",
+      " 6 6 6 5 6 6 6 6 6 5 7 6 5 6 5 5 6 6 5 6 6 6 6 7 5 5 5 5 6 6 6 6 7 6 5 6 5\n",
+      " 5 5 5 5 6 6 6 7 5 5 6 5 6 5 6 5 5 6 6 5 5 5 5 6 5 6 5 6 6 6 6 6 7 6 5 6 6\n",
+      " 6 5 6 5 6 5 6 6 5 5 6 5 6 6 6 6 6 6 6 5 5 6 5 5 5 5 5 5 5 6 6 5 5 7 5 5 6\n",
+      " 7 6 5 6 5 6 6 5 5 6 5 6 5 5 6 5 6 5 5 5 6 6 5 5 5 5 5 6 5 5 5 6 6 6 5 5 5\n",
+      " 6 6 6 6 7 5 5 5 5 6 5 6 6 6 6 5 5 6 6 6 5 5 6 7 6 7 6 5 6 6 5 6 5 6 5 6 5\n",
+      " 5 6 6 5 6 5 5 5 6 6 6 6 6 6 7 5 7 6 6 7 5 5 6 6 7 5 5 5 5 5 6 5 5 6 6 5 5\n",
+      " 5 5 5 5 5 6 6 6 5 5 5 5 5 5 6 5 5 6 6 5 5 6 6 6 5 6 6 5 6 6 6 6 6 6 5 6 6\n",
+      " 5 5 5 5 6 6 7 5 5 5 5 7 7 5 6 6 6 5 6 6 6 5 7 5 5 6 5 6 6 5 6 6 6 5 5 6 7\n",
+      " 6 6 6 5 5 5 6 6 6 5 5 5 5 7 5 7 5 5 5 5 5 5 5 7 5 5 6 5 5 5 5 5 5 5 6 6 5\n",
+      " 6 6 5 5 6 7 5 5 5 5 5 6 6 5 5 5 5 5 4 5 6 5 6 5 6 5 5 6 5 5 5 6 6 5 5 5 6\n",
+      " 7 5 5 5 6 7 7 5 6 7 6 6 5 5 5 6 7 6 6 7 6 5 5 5 5 7 5 5 6 6 6 5 4 5 5 6 6\n",
+      " 4 6 6 5 6 5 5 5 5 6 5 6 5 5 5 6 5 6 6 5 6 5 5 5 6 6 6 6 6 7 5 5 5 6 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prediction) #print out the predicted values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.50625"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_test, prediction)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datamining",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
